--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,90 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
+/* App.css */
+main {
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  margin-left: 20%;
+  height: 40%;
+  width: 50%;
+  padding:2%;
+  /* border: 1px solid ; Adjust border color as needed */
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1); /* Add shadow effect */
 }
 
-.App-link {
-  color: #61dafb;
+
+
+h1 {
+  font-size: 24px;
+  margin-bottom: 20px;
+  align-items: center;
+  color:red;
+  margin-left:45%;
+
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+form {
+  display:grid;
+  margin-bottom: 20px;
+  /* align-items: center; */
+  /* justify-content: center;  */
+}
+
+label {
+  margin-left:45%;
+  font-weight: bold;
+  color:red;
+  
+
+}
+
+input[type="text"] {
+  width: 95%;
+  padding: 8px;
+  margin-top: 5px;
+  margin-bottom: 15px;
+  /* border: 1px solid #ccc; */
+  border-radius: 4px;
+  border:none;
+  border-bottom:1px solid black;
+}
+
+input[placeholder="Enter your note here"] {
+ color:red;
+}
+
+
+li {
+  display: flex; /* Use flexbox layout */
+  align-items: center; /* Align items vertically */
+  justify-content: space-between; /* Space items evenly */
+  padding: 10px; /* Add padding for spacing */
+  border-bottom: 1px solid #ccc; /* Add border bottom for separation */
+}
+
+span {
+  flex-grow: 1; /* Allow the span to grow and take up remaining space */
+}
+
+button {
+  margin-left: 10px; /* Add margin between buttons */
+  padding: 5px 10px; /* Add padding for button size */
+  cursor: pointer; /* Change cursor to pointer on hover */
+  border: none; /* Remove default button border */
+  background-color: transparent; /* Make background transparent */
+}
+
+button:hover {
+  background-color: #f0f0f0; /* Change background color on hover */
+}
+
+
+#submit{
+  background-color: rgb(42, 42, 244); /* Make background transparent */
+  border-radius: 5px;
+  font-size: large;
+  color:white;
+  font-weight: bold;
+
+}
+#submit:hover{
+  background-color: rgb(0, 0, 121); /* Make background transparent */
+
 }
